[package]
name = "kv"
version = "0.1.1"
edition = "2021"

#  examples / test 里用的库是 dev-dependencies + dependencies。build.rs 里用到的库是 build-dependencies + dependencies。正常代码（库/二进制）用的是 dependencies
[dependencies]
bytes = "1" # 高效处理网络 buffer 的库
dashmap = "4" # 并发 HashMap
http = "0.2" # 我们使用 HTTP status code 所以引入这个类型库，// 不能升级版本，升级后找不到steam的next方法
prost = "0.9" # 处理 protobuf 的代码
thiserror = "1" # 错误定义和处理
tracing = "0.1" # 日志处理

# [dev-dependencies]
anyhow = "1" # 错误处理
async-prost = "0.3" # 支持把 protobuf 封装成 TCP frame // 不能升级版本，升级后找不到send方法
futures = "0.3" # 提供 Stream trait
tokio = { version = "1", features = ["rt", "rt-multi-thread", "io-util", "macros", "net" ] } # 异步网络库
tracing-subscriber = "0.3" # 日志处理

[build-dependencies]
prost-build = "0.12" # 编译 protobuf
